Adding simple mobile views, taglines.

--- a/scss/_imports.scss
+++ b/scss/_imports.scss
@@ -63,3 +63,4 @@ $susy: (
 @import 'views/about/about';
 @import 'views/blog/blog';
 @import 'views/portfolio/portfolio';
+@import 'views/contact/contact';
