--- a/scss/views/home/_home.scss
+++ b/scss/views/home/_home.scss
@@ -44,4 +44,8 @@ $home-main-background-bottom-overlay:rgba(8,30,40,0.3);
 	color:white;
 	font-size:4em;
 	margin-bottom:0;
+  @media all and (max-width: 800px) {
+    font-size:2em;
+    margin-bottom:2em;
+  }
 }
