--- a/scss/variables/_grid-classes.scss
+++ b/scss/variables/_grid-classes.scss
@@ -34,6 +34,14 @@
   @include span(7 of 12);
 }
 
+.col-1-6 {
+  @include span(2 of 12);
+}
+
+.col-5-6 {
+  @include span(10 of 12);
+}
+
 .col-last {
   margin-right:0;
 }
