--- a/scss/views/portfolio/_portfolio.scss
+++ b/scss/views/portfolio/_portfolio.scss
@@ -29,8 +29,22 @@ $home-main-background-bottom-overlay:rgba(161,66,0,0.6);
   }
 }
 
+.portfolio .hero {
+  position:relative;
+  margin-top:6em;
+}
+
 .portfolio .post {
   position: relative;
+}
+
+.portfolio .col-1-3,
+.portfolio .col-2-3 {
+  @media all and (max-width: 800px) {
+    float:none;
+    width:100%;
+    margin:0 0 1em 0;
+  }
 }
 
 .portfolio .col-2-3 {
