--- a/views/blog.erb
+++ b/views/blog.erb
@@ -1,3 +1,9 @@
+<article class="hero">
+	<p class="hero__text">
+		Read our minds.
+	</p>
+</article>
+
 <div class="column__wrapper">
 	<% blog_posts.each do |post| %>
 	<article class="post">
