--- a/views/portfolio.erb
+++ b/views/portfolio.erb
@@ -1,3 +1,9 @@
+<article class="hero">
+	<p class="hero__text">
+		Marvel at our accomplishments.
+	</p>
+</article>
+
 <div class="column__wrapper">
 	<% portfolio_posts.each do |post| %>
 	<article class="post col-group">
